# learn-claude-code

./: .env.example  README.md  greet.py  hello.py  hello_refactored.py  pyproject.toml  test_package.py
agents/: s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py
docs/zh/: agent-harness-cheatsheet-for-java.md  agent-harness-summary-for-java.md
mypackage/: __init__.py  utils.py
mypackage/tests/: test_utils.py
